--- a/Udacity/helloworld/templates/main.html
+++ b/Udacity/helloworld/templates/main.html
@@ -1,38 +1,49 @@
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Gui's Blog</title>
-    <link rel="stylesheet" type="text/css" href= "/static/main.css"> 
-</head>
-<body>
-    <div id="navbar">
-        <ul>
-            <li>
-                <a href="/blog"> Home</a>
-            </li>
-            <li>
-                <a href="/blog/newpost"> New Post</a>
-            </li>
-        </ul>
-    </div>
-    <div class="main-title">Gui's Blog</div> 
-    {% for post in posts %}
-        <div class='post'>
-            <div class="post-heading">
-                <div class='post-title'>
-                    <a href="/blog/{{post.key().id()}}"> {{post.subject}}</a>
-                </div>
-                
-                <div class="post-date">
-                    {{post.created.strftime("%b %d, %Y")}}
-                </div>
-            </div>
-            <div class='post-content' >
-                {{post.content.replace("\n", "<br>")|safe}}
-            </div>
-        </div>
-    {% endfor %}
-    
-    <label class="age">
-        Queried {{stamp.total_seconds()}} seconds ago
-    </label>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="stylesheet" type="text/css" href= "/static/main.css">
+		<title>My Blog</title>
+	</head>
+	<body>
+		<header class="main-title">
+			<h1>My Blog</h1>
+		</header>
+		
+		<nav id="navbar">
+			<ul>
+				<li>
+					<a href="/blog"> Home</a>
+				</li>
+				<li>
+					<a href="/blog/newpost"> New Post</a>
+				</li>
+			</ul>
+		</nav>		
+
+		<section>
+			{% for post in posts %}
+			<article class='post'>
+				
+				<header class="post-heading">
+					<hgroup>
+						<h1 class='post-title'><a href="/blog/{{post.key().id()}}"> {{post.subject}}</a></h1>
+
+						<h2 class="post-date">
+						<time datetime="{{post.created.strftime('%c')}}">
+							{{post.created.strftime("%b %d, %Y")}}
+						</time></h2>
+					</hgroup>
+				</header>
+				
+				<div class='post-content' >
+					{{post.content.replace("\n", "<br>")|safe}}
+				</div>
+			</article>
+			{% endfor %}
+		</section>
+		<footer>
+			<span class="age"> Queried {{stamp.total_seconds()}} seconds ago </span>	
+		</footer>		
+	</body>
+</html>
