--- a/Udacity/helloworld/static/main.css
+++ b/Udacity/helloworld/static/main.css
@@ -141,7 +141,7 @@ input[type=submit] {
     margin: 0;
     width: inherit;
     border-bottom: 2px solid #CCC;
-    background: #458ef6;
+    background: #c9c9c9;
     
 }
 
@@ -168,6 +168,6 @@ input[type=submit] {
 }
 
 #navbar a:hover {
-    background-color: #2264c3;
+    background-color: #999;
     text-decoration: none;
 }
