--- a/Udacity/helloworld/static/main.css
+++ b/Udacity/helloworld/static/main.css
@@ -140,7 +140,6 @@ input[type=submit] {
     left: auto;
     margin: 0;
     width: inherit;
-    border-bottom: 2px solid #CCC;
     background: #c9c9c9;
     
 }
@@ -148,23 +147,21 @@ input[type=submit] {
 #navbar ul {
     list-style: none;
     margin: 0;
-    padding: .3em;
+    padding: 0;
 }
 
 #navbar li {
     float: left;
-    margin-right: 5px;
-    margin-bottom: 0.3em;
+    margin: 0;
     padding: 0;
     font-weight: bold;
-    border-right: 1px solid #CCCCCC;
 }
 
 #navbar a {
     display: block;
     border: 0;
     margin: 0;
-    padding: 0.5em;
+    padding: 1em;
 }
 
 #navbar a:hover {
