--- a/Udacity/helloworld/templates/wikipage.html
+++ b/Udacity/helloworld/templates/wikipage.html
@@ -1,7 +1,7 @@
-{%extends "wiki-base.html"%}
+{%extends "wiki_base.html"%}
 
 {% block content %}
 
-{{content |safe}}
+{{content.replace("\n", "<br>") |safe}}
 
 {% endblock %}
