fixed blog main page

--- a/Udacity/helloworld/templates/blog_home.html
+++ b/Udacity/helloworld/templates/blog_home.html
@@ -18,7 +18,7 @@
 		</header>
 
 		<div class='post-content' >
-				{{post.content.replace("\n", "<br>")} | safe}			
+				{{post.content.replace("\n", "<br>") | safe}}			
 		</div>
 	</article>
 	{% endfor %}
